# livepaper

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: release.yml
src/: api.rs  config.rs  consts.rs  gradient.rs  main.rs  wallpaper.rs
src/command/: mod.rs
src/command/desktops/: custom.rs  gnome.rs  hyprland.rs  mod.rs  utils.rs  windows.rs
src/wallpaper/: mod.rs
src/wallpaper/layers/: foreground.rs  gradient.rs  mod.rs  stars.rs
