[package]
name = "circadian_wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.23"
colorgrad = "0.6.2"
confy = "0.5.1"
image = "0.24.5"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.95"
