[package]
name = "circadian_wallpaper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.23"
clap = { version = "4.2.1", features = ["derive"] }
colorgrad = "0.6.2"
confy = "0.5.1"
image = "0.24.5"
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.95"

[target.'cfg(windows)'.dependencies]
winapi = {version="0.3.9", features=["winuser"]}
